Added project cards, buttons and styles for portfolio layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <title>Sammy – Frontend Developer</title>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
+        <header id="Home">
+            <h1>Hello!</h1>
+            <h2>My name is Sammy. I am a Junior Frontend Developer & Emerging UI
+                Designer based in Lagos, Nigeria.</h2>
+
+            <div class="social-links">
+                <a href="https://github.com/Sammyberry" target="_blank"
+                    rel="noopener" title="GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a
+                    href="https://www.linkedin.com/in/samuel-akinbolawa-229934252/"
+                    target="_blank" rel="noopener" title="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://x.com/I_sammyberry" target="_blank"
+                    rel="noopener" title="X (Twitter)">
+                    <i class="fab fa-x-twitter"></i>
+                </a>
+            </div>
+        </header>
+
+        <main>
+            <!-- Portfolio Section -->
+            <section>
+                <h2 id="portfolio">My Projects</h2>
+                <p>A selection of my work combining design and front-end
+                    development.</p>
+            </section>
+
+            <div class="portfolio-grid">
+                <div class="project-card">
+                    <h3>Kickoff Hub</h3>
+                    <img src="images/projects/kickoffhub.png"
+                        alt="kickoffhub thumbnail"
+                    >
+
+                    <div class="project-buttons">
+                        <a
+                            href="https://github.com/Sammyberry/Livescore-project-kickoff-hub"
+                            target="_blank" rel="noopener" class="btn code-btn">
+                            code
+                        </a>
+
+                        <a href="https://kickoffhub.netlify.app/"
+                            target="_blank" rel="noopener" class="btn live-btn">
+                            design
+                        </a>
+                    </div>
+                    <p>A demo football livescore interface showing upcoming
+                        fixtures and match sections.
+                        Built with HTML, TailwindCSS, and React.js.</p>
+                </div>
+
+                <div class="project-card">
+                    <h3>Sneakers</h3>
+                    <img src="images/projects/sneakers.png"
+                        alt="sneakers thumbnail"
+                    >
+
+                    <div class="project-buttons">
+                        <a
+                            href="https://github.com/Sammyberry/Livescore-project-kickoff-hub"
+                            target="_blank" rel="noopener" class="btn code-btn">
+                            code
+                        </a>
+                    </div>
+                    <p>A simple e-commerce UI showcasing products, pricing, and
+                        cart interactions.
+                        Built with HTML, CSS, and JavaScript.</p>
+                </div>
+
+                <div class="project-card">
+                    <h3>kickoff Hub - Prototype</h3>
+                    <img src="images/projects/kickoffhub-prototype.png"
+                        alt="kickoffhub prototype thumbnail">
+                    <p>A clean Figma UI design for the Kickoff Hub football
+                        insights platform.
+                        Designed in Figma.</p>
+                </div>
+                
+                <div class="project-card">
+                    <h3>Portfolio UI Template</h3>
+                    <img src="images/projects/Home.png"
+                        alt="Portfolio UI Template thumbnail">
+                    <p>A modern portfolio website layout created for personal
+                        branding and project showcases.
+                        Designed in Figma.</p>
+                </div>
+            </div>
+
+            <!-- Skills Section -->
+        </main>
+
+    </body>
 </html>
