Refine responsive styles across portfolio sections

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <body>
         <nav class="navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#header">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+
         </nav>
 
-        <header id="Home">
+        <header id="header">
             <div class="hero-section">
                 <h3>Hello!</h3>
                 <p>My name is Sammy. I am a Junior Frontend Developer &
