feat: add resume link to hero section button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
                         rel="noopener" title="X (Twitter)">
                         <i class="fab fa-x-twitter"></i>
                     </a>
-                    <button class="hero-btn">View Resume</button>
+                    <a
+                        href="https://docs.google.com/document/d/1y0LSE-dhoAs3bkhKD5aqmncLCYhKNQHiBFsbcXYCz2U/edit?usp=sharing"
+                        target="_blank" rel="noopener" title="Resume"
+                        class="hero-btn">
+                        View Resume
+                    </a>
+
                 </div>
 
             </div>
