--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet">
+        <link rel="icon" href="images/projects/MyFavicon.png" type="image/png">
         <title>Sammy – Frontend Developer</title>
         <script src="script.js" defer></script>
     </head>
@@ -157,7 +158,7 @@
                 <h2 id="about">About Me</h2>
                 <div class="about-section">
                     <section class="about-img">
-                        <img src="images/projects/My-Picture.jpg"
+                        <img src="images/projects/favicon.png"
                             alt="profile-picture">
                     </section>
 
@@ -212,13 +213,15 @@
                         <input type="email" id="email" name="email" required>
 
                         <label for="message">Message *</label>
-                        <textarea id="message" name="message" rows="4"
+                        <textarea id="message" name="message" rows="4" maxlength="500"
                             required>
                        </textarea>
 
                         <button type="submit" class="btn submit-btn">Send
                             Message
                         </button>
+
+                        <p id="formStatus" class="form-status"></p>
                     </form>
                 </section>
 
