--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <h3>Contact</h3>
 
                     <form name="contact" method="POST" class="form-control"
-                        data-netlify="true" netlify-honeypot="bot-field">
+                        data-netlify="true" action="/" netlify-honeypot="bot-field">
                         <!-- Netlify hidden fields -->
                         <input type="hidden" name="form-name" value="contact">
                         <p class="hidden">
